<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_comms_cpp</name>
  <version>0.0.0</version>
  <description>Package providing a ROS-friendly interface for CAN communication</description>
  <maintainer email="dominic.ebner@tum.de">Dominic Ebner</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>ros2_socketcan</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
