<?xml version="1.0"?>
<package format="2">
    <name>network_communication</name>
    <version>1.0.0</version>
    <description>Library providing network functionality for sending ROS data via UDP</description>
    <maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>tum_msgs</depend>
  
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
