<?xml version="1.0"?>
<package format="3">
  <name>ros2_watchdog_cpp</name>
  <version>1.0.0</version>
  <description>Package providing generic watchdog functionality to ROS 2 nodes</description>
  <maintainer email="dominic.ebner@tum.de">Dominic Ebner</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>tum_types_cpp</depend>
  <depend>tum_type_conversions_ros_cpp</depend>
  <depend>param_management_ros2_integration_cpp</depend>
  <depend>param_management_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
