<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_watchdog_py</name>
  <version>1.0.0</version>
  <description>Generic watchdog functionality for Python ROS 2 nodes</description>
  <maintainer email="dominic.ebner@tum.de">Dominic Ebner</maintainer>
  <license>Apache 2.0</license>

  <depend>diagnostic_msgs</depend>
  <depend>tum_helpers_py</depend>
  <depend>tum_types_py</depend>
  <depend>tum_type_conversions_ros_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
