<?xml version="1.0"?>
<package format="3">
  <name>track_handler_cpp</name>
  <version>1.0.0</version>
  <description>Package providing a generic interface for reading racetrack information</description>
  <maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>param_management_cpp</depend>
  <depend>param_management_ros2_integration_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
