<?xml version="1.0"?>
<package format="3">
  <name>tum_types_cpp</name>
  <version>1.0.0</version>
  <description>Internal common types for TAM</description>
  <maintainer email="simon.hoffmann@tum.de">Simon Hoffmamm</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tsl_logger_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
