<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_types_py</name>
  <version>1.0.0</version>
  <description>Internal common Python types for TAM</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <author email="simon.sagmeister@tum.de">Simon Sagmeister</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>pybind11_vendor</depend>

  <!-- Content dependencies -->
  <depend>tum_types_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <test_depend>python3-pytest</test_depend> -->
  <!-- <test_depend>rcl_interfaces</test_depend>
  <test_depend>rclpy</test_depend> -->
  <!-- <test_depend>rosbag2_storage_default_plugins</test_depend> -->
  <!-- <test_depend>rosidl_runtime_py</test_depend>
  <test_depend>std_msgs</test_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
